# geometric-signatures-proposal

./: .gitignore  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: experiment.ablation_template.yaml  experiment.baseline.yaml
figures/phase2/: comparisons.json
scripts/: streamlit_dashboard.py  visualize_phase2.py
src/geometric_signatures/: __init__.py  cli.py  config.py  logging_config.py  motifs.py  population.py  reproducibility.py  tasks.py  tracking.py
src/geometric_signatures/analysis/: __init__.py  base.py  geometry_method.py  marble_method.py  preprocess.py  results.py  similarity_method.py  topology_method.py
src/geometric_signatures/comparison/: __init__.py  cross_system.py
src/geometric_signatures/data/: __init__.py  allen.py  ibl.py  neural_preprocessing.py
src/geometric_signatures/figures/: __init__.py  plotting.py  style.py
src/geometric_signatures/models/: __init__.py  constrained_rnn.py  constraints.py  layers.py
src/geometric_signatures/pipeline/: __init__.py  runner.py  stages.py
src/geometric_signatures/statistics/: __init__.py  aggregation.py  bootstrap.py  correction.py  permutation.py
src/geometric_signatures/tasks_data/: __init__.py  base.py  context_dependent_integration.py  evidence_accumulation.py  perceptual_discrimination.py  working_memory.py
src/geometric_signatures/training/: __init__.py  checkpoints.py  trainer.py
tests/: conftest.py  test_cli.py  test_config.py  test_motifs.py  test_population.py  test_reproducibility.py  test_tasks.py  test_tracking.py
tests/test_analysis/: test_base.py  test_geometry.py  test_preprocess.py  test_registry.py  test_similarity.py
tests/test_comparison/: __init__.py  test_cross_system.py
tests/test_data/: __init__.py  test_allen.py  test_ibl.py  test_neural_preprocessing.py
tests/test_figures/: test_plotting.py  test_style.py
tests/test_models/: test_constrained_rnn.py  test_constraints.py  test_layers.py
tests/test_pipeline/: test_runner.py  test_stages.py
tests/test_statistics/: test_aggregation.py  test_bootstrap.py  test_correction.py  test_permutation.py
tests/test_tasks_data/: test_base.py  test_generators.py
tests/test_training/: test_checkpoints.py  test_trainer.py
