[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geometric-signatures"
version = "0.1.0"
description = "Geometric signatures of computational motifs in neural population dynamics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
  {name = "Jose Lopez", email = "j.b.lopez.acc@gmail.com"},
]
keywords = [
  "computational-neuroscience",
  "neural-population-dynamics",
  "recurrent-neural-networks",
  "motif-ablation",
  "manifold-geometry",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "PyYAML>=6.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "mypy>=1.0",
  "types-PyYAML>=6.0",
  "pandas>=2.0",
]
train = [
  "torch>=2.0",
]
analysis = [
  "ripser>=0.6",
  "rsatoolbox>=0.1",
  "scikit-learn>=1.3",
  "scipy>=1.10",
]
# analysis-marble: Install MARBLE + PyG manually (fragile PyPI availability)
# pip install MARBLE-nn torch-geometric
figures = [
  "matplotlib>=3.8",
  "seaborn>=0.13",
]
dashboard = [
  "streamlit>=1.30",
]

[project.scripts]
geometric-signatures = "geometric_signatures.cli:cli_entry"

[project.urls]
Repository = "https://github.com/aifriend/geometric-signatures-proposal"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "slow: tests requiring model training (deselect with -m 'not slow')",
  "bio: tests requiring biological data API access (deselect with -m 'not bio')",
  "gpu: tests requiring GPU (deselect with -m 'not gpu')",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
  "torch",
  "torch.*",
  "ripser",
  "rsatoolbox",
  "rsatoolbox.*",
  "MARBLE",
  "MARBLE.*",
  "scipy",
  "scipy.*",
  "sklearn",
  "sklearn.*",
  "allensdk",
  "allensdk.*",
  "one",
  "one.*",
  "pandas",
  "pandas.*",
  "streamlit",
  "streamlit.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
]
